chore(project-status): updated project status page

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -30,7 +30,8 @@
                    <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
                    <a>Editor</a>                                             <br>
-                   <a>Scheduler</a>                                          <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/scheduler">Scheduler</a>               <br>
                    <img src="images/blue.png">
                    <a href="#/samples/bar-charts">Bar Charts</a>             <br>
                    <img src="images/blue.png">
@@ -52,7 +53,8 @@
                    <a>Spreadsheet</a>                                        <br>
                    <a>Listview</a>                                           <br>
                    <a>Pivot Grid</a>                                         <br>
-                   <a>TreeList</a>                                           <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/treelist">TreeList</a>                 <br>
                    <a>ScrollView</a>                                         <br>
                    <br>
                    EDITORS                                                   <br>
@@ -63,7 +65,8 @@
                    <a href="#/samples/combobox">Combobox</a>                 <br>
                    <img src="images/blue.png">
                    <a href="#/samples/datepicker">DatePicker</a>             <br>
-                   <a>DateTimePicker</a>                                     <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/datetimepicker">DateTimePicker</a>     <br>
                    <img src="images/orange.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
                    <a>Editor</a>                                             <br>
@@ -154,7 +157,8 @@
                   <a>ButtonGroup</a>                                         <br>
                   <img src="images/orange.png">
                   <a>Menu</a>                                                <br>
-                  <a>PanelBar</a>                                            <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/panelbar">PanelBar</a>                  <br>
                   <img src="images/orange.png">
                   <a href="#/samples/tabstrip">TabStrip</a>                  <br>
                   <img src="images/orange.png">
@@ -168,7 +172,6 @@
                   <img src="images/blue.png">
                   <a href="#/samples/progressbar">ProgressBar</a>            <br>
                   <a>Sortable</a>                                            <br>
-                  <a>Styling</a>                                             <br>
                </div>
            </div>
 
