chore(sample) add access to existing menu component

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -156,7 +156,7 @@
                   <a href="#/samples/button">Button</a>                      <br>
                   <a>ButtonGroup</a>                                         <br>
                   <img src="images/orange.png">
-                  <a>Menu</a>                                                <br>
+                  <a href="#/samples/menu">Menu</a>                      <br>
                   <img src="images/blue.png">
                   <a href="#/samples/panelbar">PanelBar</a>                  <br>
                   <img src="images/orange.png">
