chore(sample): disable animation on tabstrips
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/195

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -44,7 +44,7 @@
       </div>
       <div class="row" style="margin-top: 10px">
         <div class="col-sm-12">
-          <div k-tabstrip k-tabstrip.ref="tabstrip">
+          <div k-tabstrip="k-animation.bind: false" k-tabstrip.ref="tabstrip">
               <ul>
                   <li class="k-state-active">Without Bridge</li>
                   <li>With Bridge (View)</li>
