--- a/sample/src/installation/index.html
+++ b/sample/src/installation/index.html
@@ -2,7 +2,7 @@
   <section>
       <h4>Aurelia-KendoUI-bridge installation</h4>
 
-        <div k-tabstrip k-on-select.delegate="tabChanged($event.detail)" k-tabstrip.ref="tabstrip">
+        <div k-tabstrip="k-animation.bind: false" k-on-select.delegate="tabChanged($event.detail)" k-tabstrip.ref="tabstrip">
           <ul>
               <li ref="installation" data-type="installation" class="k-state-active">Installation</li>
               <li ref="core" data-type="core">New from Github: Kendo Core</li>
