feat(listview): added listview wrapper

--- a/sample/src/samples/listview/editing.html
+++ b/sample/src/samples/listview/editing.html
@@ -23,9 +23,9 @@
           </div>
         </div>
       </k-list-template>
-      <k-edit-template>
+      <k-list-edit-template>
         <div class="product-view k-widget">
-          <!-- <dl>
+          <dl>
             <dt>Product Name</dt>
             <dd>
               <input type="text" class="k-textbox" data-bind="value:ProductName" name="ProductName" required="required" validationMessage="required" />
@@ -43,13 +43,13 @@
             </dd>
             <dt>Discontinued</dt>
             <dd><input type="checkbox" name="Discontinued" data-bind="checked:Discontinued"></dd>
-          </dl> -->
+          </dl>
           <div class="edit-buttons">
             <a class="k-button k-update-button"><span class="k-icon k-update"></span></a>
             <a class="k-button k-cancel-button"><span class="k-icon k-cancel"></span></a>
           </div>
         </div>
-      </k-edit-template>
+      </k-list-edit-template>
     </k-list-view>
 
     <div ref="pager" class="k-pager-wrap"></div>
