--- a/sample/src/samples/dropdownlist/basic-use.html
+++ b/sample/src/samples/dropdownlist/basic-use.html
@@ -2,23 +2,18 @@
     <div id="example">
         <div id="cap-view" class="demo-section k-content">
             <h4>Customize your Kendo Cap</h4>
-            <div id="cap" class="black-cap"></div>
+            <div ref="cap" id="cap" class="black-cap"></div>
 
             <h4>Cap Color</h4>
-            <input  k-drop-down-list.ref="capColor"
-                		k-drop-down-list="k-data-text-field: text;
+            <input  k-drop-down-list="k-data-text-field: text;
                             					k-data-value-field: value;
                             					k-data-source.bind: data;
-                            					k-index.bind: 0;"
-                    k-on-change.delegate="onChange()"
-                    k-value="1"
+                            					k-value.two-way: capColor;"
+                    k-on-change.delegate="colorChanged()"
                     style="width: 100%;" />
 
             <h4 style="margin-top: 2em;">Cap Size</h4>
-            <select k-drop-down-list.ref="capSize"
-            		    k-drop-down-list
-                    id="size"
-                    style="width: 100%;">
+            <select k-drop-down-list="k-value.two-way: capSize" style="width: 100%;">
                 <option>S - 6 3/4"</option>
                 <option>M - 7 1/4"</option>
                 <option>L - 7 1/8"</option>
