chore(samples): dropdownlist

--- a/sample/src/samples/dropdownlist/virtualization.html
+++ b/sample/src/samples/dropdownlist/virtualization.html
@@ -1,2 +1,11 @@
 <template>
+    <div id="example">
+        <div class="demo-section k-content">
+            <h4>Search for shipping name</h4>
+            <input  k-drop-down-list="k-data-text-field: ProductName;
+                                      k-data-value-field: ProductID;
+                                      k-data-source.bind: dataSource"
+                    style="width: 100%" />
+        </div>
+    </div>
 </template>
