--- a/sample/src/samples/dropdownlist/grouping.html
+++ b/sample/src/samples/dropdownlist/grouping.html
@@ -1,2 +1,12 @@
 <template>
+  <div id="example">
+      <div class="demo-section k-content">
+          <h4>Customers</h4>
+          <input  k-drop-down-list="k-data-text-field: ContactName;
+                                    k-data-value-field: CustomerID;
+                                    k-height: 400;
+                                    k-data-source.bind: dataSource"
+                  style="width: 100%" />
+      </div>
+  </div>
 </template>
