--- a/sample/src/samples/dropdownlist/server-filtering.html
+++ b/sample/src/samples/dropdownlist/server-filtering.html
@@ -1,2 +1,12 @@
 <template>
+  <div id="example">
+      <div class="demo-section k-content">
+          <h4>Products</h4>
+          <input  k-drop-down-list="k-filter: startswith;
+                                    k-data-text-field: ProductName;
+                                    k-data-value-field: ProductID;
+                                    k-data-source.bind: dataSource"
+                  style="width: 100%" />
+      </div>
+  </div>
 </template>
