--- a/sample/src/samples/dropdownlist/api.html
+++ b/sample/src/samples/dropdownlist/api.html
@@ -3,12 +3,13 @@
 
             <div class="demo-section k-content">
                 <h4>Select movie</h4>
-                <input k-drop-down-list="k-data-text-field: text;
-                                      			k-data-value-field: value;
-                                      			k-data-source.bind: data;
-                                      			k-height.bind: 100;
-                                            k-widget.two-way: movies"
-                                      			style="width: 100%;" />
+                <k-drop-down-list k-data-text-field="text"
+                            			k-data-value-field="value"
+                            			k-data-source.bind="data"
+                            			k-height.bind="100"
+                                  k-widget.two-way="movies"
+                            			style="width: 100%;">
+                </k-drop-down-list>
             </div>
 
             <div class="box wide">
