--- a/sample/src/samples/dropdownlist/binding-to-remote-data.html
+++ b/sample/src/samples/dropdownlist/binding-to-remote-data.html
@@ -2,10 +2,11 @@
     <div id="example">
         <div class="demo-section k-content">
             <h4>Products</h4>
-            <input  k-drop-down-list="k-data-text-field: ProductName;
-                                      k-data-value-field: ProductID;
-                                      k-data-source.bind: dataSource"
-                    style="width: 100%" />
+            <k-drop-down-list k-data-text-field="ProductName"
+                              k-data-value-field="ProductID"
+                              k-data-source.bind="dataSource"
+                              style="width: 100%">
+            </k-drop-down-list>
         </div>
     </div>
 </template>
