--- a/sample/src/samples/dropdownlist/cascading-dropdownlist.html
+++ b/sample/src/samples/dropdownlist/cascading-dropdownlist.html
@@ -5,47 +5,50 @@
             <div class="demo-section k-content">
 
                 <h4>Categories:</h4>
-                <input k-drop-down-list="k-option-label: Select category...;
-                        k-data-text-field: CategoryName;
-                        k-data-value-field: CategoryID;
-                        k-data-source.bind: {
+                <k-drop-down-list k-option-label="Select category..."
+                        k-data-text-field="CategoryName"
+                        k-data-value-field="CategoryID"
+                        k-data-source.bind="{
                             type: 'odata',
                             serverFiltering: true,
                             transport: {
                                 read: '//demos.telerik.com/kendo-ui/service/Northwind.svc/Categories'
                             }
                         }"
-                        id="categories" style="width: 100%;" />
+                        id="categories" style="width: 100%;">
+                </k-drop-down-list>
 
                 <h4 style="margin-top: 2em;">Products:</h4>
-                <input k-drop-down-list="k-auto-bind.bind: false;
-                        k-cascade-from: categories;
-                        k-option-label: Select product...;
-                        k-data-text-field: ProductName;
-                        k-data-value-field: ProductID;
-                        k-data-source.bind: {
+                <k-drop-down-list k-auto-bind.bind="false"
+                        k-cascade-from="categories"
+                        k-option-label="Select product..."
+                        k-data-text-field="ProductName"
+                        k-data-value-field="ProductID"
+                        k-data-source.bind="{
                             type: 'odata',
                             serverFiltering: true,
                             transport: {
                                 read: '//demos.telerik.com/kendo-ui/service/Northwind.svc/Products'
                             }
                         }"
-                        k-drop-down-list.ref="products" id="products" style="width: 100%;" />
+                        k-drop-down-list.ref="products" id="products" style="width: 100%;">
+                </k-drop-down-list>
 
-                <!-- <h4 style="margin-top: 2em;">Orders:</h4>
-                <input k-drop-down-list="k-auto-bind.bind: false;
-                        k-cascade-from: products;
-                        k-option-label: Select order...;
-                        k-data-text-field: Order.ShipCity;
-                        k-data-value-field: OrderID;
-                        k-data-source.bind: {
+                <h4 style="margin-top: 2em;">Orders:</h4>
+                <k-drop-down-list k-auto-bind.bind="false"
+                        k-cascade-from="products"
+                        k-option-label="Select order..."
+                        k-data-text-field="Order.ShipCity"
+                        k-data-value-field="OrderID"
+                        k-data-source.bind="{
                             type: 'odata',
                             serverFiltering: true,
                             transport: {
                                 read: '//demos.telerik.com/kendo-ui/service/Northwind.svc/Order_Details?$expand=Order'
                             }
                         }"
-                        k-drop-down-list.ref="orders" id="orders" disabled="disabled" style="width: 100%;" /> -->
+                        k-drop-down-list.ref="orders" id="orders" disabled="disabled" style="width: 100%;">
+                </k-drop-down-list>
 
                 <button click.delegate="viewOrder()" k-button style="margin-top: 2em; float: right;">View Order</button>
 
