--- a/sample/src/samples/dropdownlist/customizing-templates.html
+++ b/sample/src/samples/dropdownlist/customizing-templates.html
@@ -1,2 +1,16 @@
 <template>
+  <require from="./customizing-templates.css"></require>
+  <div id="example">
+    <div id="dropdownlist-templates">
+      <div class="demo-section k-content">
+          <h4>Customers</h4>
+          <k-drop-down-list k-data-text-field="ContactName"
+                            k-data-value-field="CustomerID"
+                            k-height="400"
+                            k-data-source.bind="dataSource"
+                            style="width: 100%">
+          </k-drop-down-list>
+      </div>
+    </div>
+  </div>
 </template>
