--- a/sample/src/samples/dropdownlist/grouping.html
+++ b/sample/src/samples/dropdownlist/grouping.html
@@ -2,11 +2,12 @@
   <div id="example">
       <div class="demo-section k-content">
           <h4>Customers</h4>
-          <input  k-drop-down-list="k-data-text-field: ContactName;
-                                    k-data-value-field: CustomerID;
-                                    k-height: 400;
-                                    k-data-source.bind: dataSource"
-                  style="width: 100%" />
+          <k-drop-down-list k-data-text-field="ContactName"
+                            k-data-value-field="CustomerID"
+                            k-height="400"
+                            k-data-source.bind="dataSource"
+                            style="width: 100%">
+          </k-drop-down-list>
       </div>
   </div>
 </template>
