--- a/sample/src/samples/dropdownlist/virtualization.html
+++ b/sample/src/samples/dropdownlist/virtualization.html
@@ -2,10 +2,15 @@
     <div id="example">
         <div class="demo-section k-content">
             <h4>Search for shipping name</h4>
-            <input  k-drop-down-list="k-data-text-field: ProductName;
-                                      k-data-value-field: ProductID;
-                                      k-data-source.bind: dataSource"
-                    style="width: 100%" />
+            <k-drop-down-list k-template="<span class='order-id'>#= OrderID #</span> #= ShipName #, #= ShipCountry #"
+                              k-data-text-field="ShipName"
+                              k-data-value-field="OrderID"
+                              k-filter="contains"
+                              k-virtual.bind="virtual"
+                              k-height.bind="290"
+                              k-data-source.bind="dataSource"
+                              style="width: 100%">
+            </k-drop-down-list>
         </div>
     </div>
 </template>
