--- a/sample/src/samples/grid/advanced.html
+++ b/sample/src/samples/grid/advanced.html
@@ -2,13 +2,17 @@
   <require from="./counter"></require>
   <k-grid k-data-source.bind="datasource">
     <k-col title="Contact Name" field="ContactName">
-      <counter></counter>
+      <k-template>
+        <counter></counter>
 
-      <div if.bind="true">This should be visible</div>
-      <div if.bind="false">This should be hidden</div>
+        <div if.bind="true">This should be visible</div>
+        <div if.bind="false">This should be hidden</div>
+      </k-template>
     </k-col>
     <k-col title="Contact Name" field="ContactName">
-      ${ContactName | capitalize}
+      <k-template>
+        ${ContactName | capitalize}
+      </k-template>
     </k-col>
   </k-grid>
 </template>
