--- a/sample/src/samples/grid/virtualization-of-remote-data.html
+++ b/sample/src/samples/grid/virtualization-of-remote-data.html
@@ -10,7 +10,9 @@
     <k-col title="Ship City" field="ShipCity" width.bind="160"></k-col>
     <k-col title="Ship Country" field="ShipCountry" width.bind="160"></k-col>
     <k-col title="Test">
-      <button k-button class="k-primary">Enable</button>
+      <k-template>
+        <button k-button class="k-primary">Enable</button>
+      </k-template>
     </k-col>
   </k-grid>
 </template>
