chore(samples): samples with multiple templates

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -32,13 +32,15 @@
       <div class="row">
         <div class="col-sm-12">
           <k-grid k-data-source.bind="datasource" k-pageable.bind="{ refresh: true, pageSizes: true, buttonCount: 10 }" k-sortable.bind="true">
-            <k-col title="Contact Name" field="ContactName">
-              <div class='customer-photo' style="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
-              <div class='customer-name'>${ContactName}</div>
+            <k-col k-title="Contact Name" k-field="ContactName">
+              <k-template>
+                <div class='customer-photo' style="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
+                <div class='customer-name'>${ContactName}</div>
+              </k-template>
             </k-col>
-            <k-col title="Contact Title" field="ContactTitle"></k-col>
-            <k-col title="Company Name" field="CompanyName"></k-col>
-            <k-col field="Country"></k-col>
+            <k-col k-title="Contact Title" k-field="ContactTitle"></k-col>
+            <k-col k-title="Company Name" k-field="CompanyName"></k-col>
+            <k-col k-field="Country"></k-col>
           </k-grid>
         </div>
       </div>
