--- a/sample/src/samples/treelist/export-to-pdf.html
+++ b/sample/src/samples/treelist/export-to-pdf.html
@@ -7,9 +7,9 @@
                k-pdf.bind="{
                 fileName: 'Kendo UI TreeList Export.pdf',
                 proxyURL: '//demos.telerik.com/kendo-ui/service/export'}">
-    <k-tree-col field="FirstName" expandable.bind="true" title="First Name" width.bind="250"></k-tree-col>
-    <k-tree-col field="LastName" title="Last Name"></k-tree-col>
-    <k-tree-col field="Position"></k-tree-col>
-    <k-tree-col field="Extension" title="Ext" format="{0:#}"></k-tree-col>
+    <k-tree-col k-field="FirstName" k-expandable.bind="true" k-title="First Name" k-width.bind="250"></k-tree-col>
+    <k-tree-col k-field="LastName" k-title="Last Name"></k-tree-col>
+    <k-tree-col k-field="Position"></k-tree-col>
+    <k-tree-col k-field="Extension" k-title="Ext" k-format="{0:#}"></k-tree-col>
   </k-tree-list>
 </template>
