--- a/sample/src/about/kendo-bridge-init.html
+++ b/sample/src/about/kendo-bridge-init.html
@@ -3,14 +3,16 @@
           k-pageable.bind="{ refresh: true, pageSizes: true, buttonCount: 10 }"
           k-sortable.bind="true">
     <!-- Column definitions in HTML -->
-    <k-col title="Contact Name" field="ContactName">
-      <!-- Column templates directly in your markup - where they belong! -->
-      <div class="customer-photo" style="background-image: url(../content/web/Customers/${CustomerID}.jpg);"></div>
-      <!-- Use Aurelia binding features like interpolation, value converters and binding behaviors -->
-      <div class="customer-name">${ContactName}</div>
+    <k-col k-title="Contact Name" k-field="ContactName">
+      <k-template>
+        <!-- Column templates directly in your markup - where they belong! -->
+        <div class="customer-photo" style="background-image: url(../content/web/Customers/${CustomerID}.jpg);"></div>
+        <!-- Use Aurelia binding features like interpolation, value converters and binding behaviors -->
+        <div class="customer-name">${ContactName}</div>
+      </k-template>
     </k-col>
-    <k-col title="Contact Title" field="ContactTitle"></k-col>
-    <k-col title="Company Name" field="CompanyName"></k-col>
-    <k-col field="Country"></k-col>
+    <k-col k-title="Contact Title" k-field="ContactTitle"></k-col>
+    <k-col k-title="Company Name" k-field="CompanyName"></k-col>
+    <k-col k-field="Country"></k-col>
   </k-grid>
 </template>
