--- a/sample/src/samples/grid/basic-use.html
+++ b/sample/src/samples/grid/basic-use.html
@@ -8,9 +8,9 @@
           <div class='customer-name'>${ContactName}</div>
         </k-template>
       </k-col>
-      <k-col title="Contact Name" field="ContactName"></k-col>
-      <k-col title="Contact Title" field="ContactTitle"></k-col>
-      <k-col title="Company Name" field="CompanyName"></k-col>
-      <k-col field="Country"></k-col>
+      <k-col k-title="Contact Name" k-field="ContactName"></k-col>
+      <k-col k-title="Contact Title" k-field="ContactTitle"></k-col>
+      <k-col k-title="Company Name" k-field="CompanyName"></k-col>
+      <k-col k-field="Country"></k-col>
     </k-grid>
 </template>
