--- a/sample/src/samples/grid/binding-to-local-data.html
+++ b/sample/src/samples/grid/binding-to-local-data.html
@@ -1,12 +1,12 @@
 <template>
-  <k-grid k-data-source.bind="datasource" 
-          k-pageable.bind="{ input: true, numeric: false}" 
-          k-filterable.bind="true" 
-          k-sortable.bind="true" 
+  <k-grid k-data-source.bind="datasource"
+          k-pageable.bind="{ input: true, numeric: false}"
+          k-filterable.bind="true"
+          k-sortable.bind="true"
           k-scrollable.bind="true">
-    <k-col title="ProductName" field="ProductName"></k-col>
-    <k-col title="Unit Price" field="UnitPrice" format="{0:c}" width="130px"></k-col>
-    <k-col title="Units In Stock" field="UnitsInStock" width="130px"></k-col>
-    <k-col field="Discontinued" width="130px"></k-col>
+    <k-col k-title="ProductName" k-field="ProductName"></k-col>
+    <k-col k-title="Unit Price" k-field="UnitPrice" k-format="{0:c}" k-width="130px"></k-col>
+    <k-col k-title="Units In Stock" k-field="UnitsInStock" k-width="130px"></k-col>
+    <k-col k-field="Discontinued" k-width="130px"></k-col>
   </k-grid>
 </template>
