--- a/sample/src/samples/treelist/api.html
+++ b/sample/src/samples/treelist/api.html
@@ -1,9 +1,9 @@
 <template>
   <k-tree-list k-data-source.bind="dataSource" k-selectable.bind="true" k-widget.bind="treelist">
-    <k-tree-col field="FirstName" expandable.bind="true" title="First Name"></k-tree-col>
-    <k-tree-col field="LastName" title="Last Name"></k-tree-col>
-    <k-tree-col field="Position"></k-tree-col>
-    <k-tree-col field="Extension" title="Ext" format="{0:#}"></k-tree-col>
+    <k-tree-col k-field="FirstName" k-expandable.bind="true" k-title="First Name"></k-tree-col>
+    <k-tree-col k-field="LastName" k-title="Last Name"></k-tree-col>
+    <k-tree-col k-field="Position"></k-tree-col>
+    <k-tree-col k-field="Extension" k-title="Ext" k-format="{0:#}"></k-tree-col>
   </k-tree-list>
 
   <div class="box wide">
