--- a/sample/src/samples/treelist/editing.html
+++ b/sample/src/samples/treelist/editing.html
@@ -1,14 +1,14 @@
 <template>
     <k-tree-list k-data-source.bind="dataSource" k-editable.bind="true" k-toolbar.bind="['create']" k-height.bind="540">
-      <k-tree-col field="FirstName" expandable.bind="true" title="First Name" width.bind="280"></k-tree-col>
-      <k-tree-col field="LastName" title="Last Name" width.bind="100"></k-tree-col>
-      <k-tree-col field="Position"></k-tree-col>
-      <k-tree-col field="HireDate" title="Hire Date" format="{0:MMMM d, yyyy}"></k-tree-col>
-      <k-tree-col field="Phone" title="Phone"></k-tree-col>
-      <k-tree-col field="Extension" title="Ext" format="{0:#}"></k-tree-col>
-      <k-tree-col title="Edit"
-                  command.bind="['edit', 'destroy']"
-                  width.bind="250"
-                  attributes.bind="{style: 'text-align: center'}"></k-tree-col>
+      <k-tree-col k-field="FirstName" k-expandable.bind="true" k-title="First Name" k-width.bind="280"></k-tree-col>
+      <k-tree-col k-field="LastName" k-title="Last Name" k-width.bind="100"></k-tree-col>
+      <k-tree-col k-field="Position"></k-tree-col>
+      <k-tree-col k-field="HireDate" k-title="Hire Date" k-format="{0:MMMM d, yyyy}"></k-tree-col>
+      <k-tree-col k-field="Phone" k-title="Phone"></k-tree-col>
+      <k-tree-col k-field="Extension" k-title="Ext" k-format="{0:#}"></k-tree-col>
+      <k-tree-col k-title="Edit"
+                  k-command.bind="['edit', 'destroy']"
+                  k-width.bind="250"
+                  k-attributes.bind="{style: 'text-align: center'}"></k-tree-col>
     </k-tree-list>
 </template>
