--- a/sample/src/samples/treelist/events.html
+++ b/sample/src/samples/treelist/events.html
@@ -5,11 +5,11 @@
                  k-on-remove.delegate="logger.log('remove')"
                  k-on-data-bound.delegate="logger.log('dataBound')"
                  k-on-data-binding.delegate="logger.log('dataBinding')">
-      <k-tree-col field="FirstName" expandable.bind="true" title="First Name" width.bind="250"></k-tree-col>
-      <k-tree-col field="LastName" title="Last Name"></k-tree-col>
-      <k-tree-col field="HireDate" title="Hire Date" format="{0:MMMM d, yyyy}"></k-tree-col>
-      <k-tree-col field="Extension" title="Ext" format="{0:#}"></k-tree-col>
-      <k-tree-col command.bind="['edit', 'destroy']"></k-tree-col>
+      <k-tree-col k-field="FirstName" k-expandable.bind="true" k-title="First Name" k-width.bind="250"></k-tree-col>
+      <k-tree-col k-field="LastName" k-title="Last Name"></k-tree-col>
+      <k-tree-col k-field="HireDate" k-title="Hire Date" k-format="{0:MMMM d, yyyy}"></k-tree-col>
+      <k-tree-col k-field="Extension" k-title="Ext" k-format="{0:#}"></k-tree-col>
+      <k-tree-col k-command.bind="['edit', 'destroy']"></k-tree-col>
     </k-tree-list>
 
     <div class="box">
