--- a/sample/src/samples/treelist/frozen-columns.html
+++ b/sample/src/samples/treelist/frozen-columns.html
@@ -6,15 +6,15 @@
                  k-sortable.bind="true"
                  k-filterable.bind="true"
                  k-column-menu.bind="true">
-      <k-tree-col field="FirstName"
-                  expandable.bind="true"
-                  title="First Name"
-                  width.bind="250"
-                  locked.bind="true"
-                  lockable.bind="false"></k-tree-col>
-      <k-tree-col field="LastName" title="Last Name" locked.bind="true" width.bind="200"></k-tree-col>
-      <k-tree-col field="Position" width.bind="400"></k-tree-col>
-      <k-tree-col field="Extension" title="Ext" width.bind="150" format="{0:#}" lockable.bind="false"></k-tree-col>
+      <k-tree-col k-field="FirstName"
+                  k-expandable.bind="true"
+                  k-title="First Name"
+                  k-width.bind="250"
+                  k-locked.bind="true"
+                  k-lockable.bind="false"></k-tree-col>
+      <k-tree-col k-field="LastName" k-title="Last Name" k-locked.bind="true" k-width.bind="200"></k-tree-col>
+      <k-tree-col k-field="Position" k-width.bind="400"></k-tree-col>
+      <k-tree-col k-field="Extension" k-title="Ext" k-width.bind="150" k-format="{0:#}" k-lockable.bind="false"></k-tree-col>
     </k-tree-list>
   </div>
 
