--- a/sample/src/samples/treelist/popup-editing.html
+++ b/sample/src/samples/treelist/popup-editing.html
@@ -3,11 +3,11 @@
                  k-data-source.bind="dataSource"
                  k-toolbar.bind="['create']"
                  k-height.bind="540">
-      <k-tree-col field="FirstName" expandable.bind="true" title="First Name" width.bind="280"></k-tree-col>
-      <k-tree-col field="LastName" title="Last Name" width.bind="100"></k-tree-col>
-      <k-tree-col field="Position"></k-tree-col>
-      <k-tree-col field="Phone" title="Phone"></k-tree-col>
-      <k-tree-col field="Extension" title="Ext" format="{0:#}"></k-tree-col>
-      <k-tree-col command.bind="['edit', 'destroy']"></k-tree-col>
+      <k-tree-col k-field="FirstName" k-expandable.bind="true" k-title="First Name" k-width.bind="280"></k-tree-col>
+      <k-tree-col k-field="LastName" k-title="Last Name" k-width.bind="100"></k-tree-col>
+      <k-tree-col k-field="Position"></k-tree-col>
+      <k-tree-col k-field="Phone" k-title="Phone"></k-tree-col>
+      <k-tree-col k-field="Extension" k-title="Ext" k-format="{0:#}"></k-tree-col>
+      <k-tree-col k-command.bind="['edit', 'destroy']"></k-tree-col>
     </k-tree-list>
 </template>
