--- a/sample/src/help/doc.html
+++ b/sample/src/help/doc.html
@@ -4,7 +4,7 @@
       <br>
       <ul ref="panelBarDiv" class="help-docs">
         <li repeat.for="category of categories">
-          <h4>${category.name}</h4>
+          ${category.name}
           <ul>
             <li repeat.for="file of category.files" click.delegate="routeToPage(file.name, category.name)">${file.name}</li>
           </ul>
