--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -2,14 +2,24 @@
     <require from="./doc"></require>
     <section>
         <h4>Components Catalog Help</h4>
-
-          <div k-tabstrip k-on-select.delegate="tabSelected($event.detail)">
-            <ul>
-                <li class="k-state-active">Components Docs</li>
-            </ul>
-            <div style="height: 790px;">
-              <doc></doc>
-            </div>
+        <div k-tabstrip k-on-select.delegate="tabSelected($event.detail)">
+          <ul>
+              <li class="k-state-active">Components Docs</li>
+              <li>Support</li>
+          </ul>
+          <div style="height: 790px;">
+            <doc></doc>
           </div>
+          <div>
+            <h4>Gitter</h4>
+            <p>Do you need some help? We can help you out in our Gitter room.</p>
+            <a href="https://gitter.im/adriatic/Aurelia-KendoUI?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge" target="_blank">
+              <img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;">
+            </a>
+
+            <h4>Github</h4>
+            We also monitor <a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues" target="_blank">issues</a> on Github.
+          </div>
+        </div>
     </section>
 </template>
