feat(combobox): combobox wrapper

--- a/sample/src/samples/combobox/basic-use.html
+++ b/sample/src/samples/combobox/basic-use.html
@@ -1,2 +1,42 @@
 <template>
+    <div id="example">
+        <div id="cap-view" class="demo-section k-content">
+            <h4>Customize your Kendo T-shirt</h4>
+            <img src="http://demos.telerik.com/kendo-ui/content/web/combobox/tShirt.png" id="tshirt"/>
+
+            <h4>T-shirt fabric</h4>
+            <k-combobox k-data-text-field="text"
+                    					k-data-value-field="value"
+                              k-data-source.bind="data"
+                              k-value.two-way="fabric"
+                              k-filter="contains"
+                              k-suggest.bind="true"
+                              style="width: 100%;">
+            </k-combobox>
+
+            <h4 style="margin-top: 2em;">T-shirt Size</h4>
+            <k-combobox k-value.two-way="size">
+              <select style="width: 100%;">
+                <option>X-Small</option>
+                <option>Small</option>
+                <option>Medium</option>
+                <option>Large</option>
+                <option>X-Large</option>
+                <option>2X-Large</option>
+              </select>
+            </k-combobox>
+
+            <button class="k-button k-primary" click.delegate="buyCap()" style="margin-top: 2em; float: right;">Customize</button>
+        </div>
+    </div>
+    <style>
+      #tshirt {
+           display: block;
+           margin: 2em auto;
+       }
+       .k-readonly
+       {
+           color: gray;
+       }
+    </style>
 </template>
