--- a/sample/src/samples/combobox/api.html
+++ b/sample/src/samples/combobox/api.html
@@ -1,2 +1,81 @@
 <template>
+  <div id="example">
+    <div class="demo-section k-content">
+      <h4>Select movie</h4>
+      <k-combobox k-data-text-field="text"
+                  			k-data-value-field="value"
+                  			k-data-source.bind="data"
+                  			k-height.bind="100"
+                        k-widget.two-way="movies"
+                  			style="width: 100%;">
+      </k-combobox>
+    </div>
+
+    <div class="box wide">
+      <div class="box-col">
+        <h4>API Functions</h4>
+        <ul class="options">
+          <li>
+              <button click.delegate="movies.enable()" class="k-button">Enable</button>
+              <button click.delegate="movies.enable(false)" class="k-button">Disable</button>
+          </li>
+          <li>
+              <button click.delegate="movies.readonly()" class="k-button">Readonly</button>
+          </li>
+          <li>
+              <button click.delegate="movies.open()" class="k-button">Open</button>
+              <button click.delegate="movies.close()" class="k-button">Close</button>
+          </li>
+          <li>
+              <button click.delegate="getValue()" class="k-button">Get value</button>
+              <button click.delegate="getText()" class="k-button">Get text</button>
+          </li>
+
+        </ul>
+      </div>
+      <div class="box-col">
+        <h4>Filter</h4>
+        <ul class="options">
+            <li>
+                <k-drop-down-list k-value.two-way="filter"
+                                  k-on-change.delegate="filterTypeOnChanged()">
+                  <select>
+                      <option value="none">None</option>
+                      <option value="startswith">Starts with</option>
+                      <option value="contains">Contains</option>
+                      <option value="eq">Equal</option>
+                  </select>
+                </k-drop-down-list>
+            </li>
+            <li>
+                <input ref="word" value="The" class="k-textbox" style="width: 149px; margin: 0;" />
+            </li>
+            <li>
+                <button class="k-button" click.delegate="find(word.value)">Find item</button>
+            </li>
+        </ul>
+      </div>
+      <div class="box-col">
+        <h4>Select</h4>
+        <ul class="options">
+          <li>
+              <input ref="indexInput" value="0" class="k-textbox" style="width: 40px; margin: 0;" />
+              <button click.delegate="setIndex(indexInput.value)" class="k-button">Select by index</button>
+          </li>
+          <li>
+              <input ref="valueInput" value="1" class="k-textbox" style="width: 40px; margin: 0;" />
+              <button click.delegate="setValue(valueInput.value)" class="k-button">Select by value</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <style>
+      .configuration .k-textbox {
+          width: 40px;
+      }
+      .k-button {
+          min-width: 80px;
+      }
+  </style>
 </template>
