--- a/sample/src/samples/combobox/grouping.html
+++ b/sample/src/samples/combobox/grouping.html
@@ -1,2 +1,13 @@
 <template>
+  <div id="example">
+      <div class="demo-section k-content">
+          <h4>Customers</h4>
+          <k-combobox k-data-text-field="ContactName"
+                            k-data-value-field="CustomerID"
+                            k-height="400"
+                            k-data-source.bind="dataSource"
+                            style="width: 100%">
+          </k-combobox>
+      </div>
+  </div>
 </template>
