--- a/sample/src/samples/combobox/server-filtering.html
+++ b/sample/src/samples/combobox/server-filtering.html
@@ -1,2 +1,16 @@
 <template>
+  <div id="example">
+      <div class="demo-section k-content">
+          <h4>Find a product</h4>
+          <k-combobox k-placeholder="Select product"
+                      k-data-text-field="ProductName"
+                      k-data-value-field="ProductID"
+                      k-filter="contains"
+                      k-auto-bind.bind="false"
+                      k-min-length.bind="3"
+                      k-data-source.bind="dataSource"
+                      style="width: 100%">
+          </k-combobox>
+      </div>
+  </div>
 </template>
