--- a/sample/src/samples/combobox/virtualization.html
+++ b/sample/src/samples/combobox/virtualization.html
@@ -1,2 +1,18 @@
 <template>
+    <div id="example">
+        <div class="demo-section k-content">
+            <h4>Orders</h4>
+            <k-combobox k-data-text-field="ShipName"
+                        k-data-value-field="OrderID"
+                        k-filter="contains"
+                        k-virtual.bind="virtual"
+                        k-height.bind="290"
+                        k-data-source.bind="dataSource"
+                        style="width: 100%">
+              <k-template>
+                <span class='order-id'>${OrderID}</span> ${ShipName}, ${ShipCountry}
+              </k-template>
+            </k-combobox>
+        </div>
+    </div>
 </template>
