--- a/sample/src/samples/calendar/api.html
+++ b/sample/src/samples/calendar/api.html
@@ -27,12 +27,14 @@
               <h4>Navigation</h4>
               <ul class="options">
                   <li>
-                      <select k-drop-down-list="k-value.two-way: view">
-                          <option value="up">upper view</option>
-                          <option value="down">lower view</option>
-                          <option value="past">past</option>
-                          <option value="future" selected="selected">future</option>
-                      </select>
+                      <k-drop-down-list k-value.two-way="view">
+                        <select>
+                            <option value="up">upper view</option>
+                            <option value="down">lower view</option>
+                            <option value="past">past</option>
+                            <option value="future" selected="selected">future</option>
+                        </select>
+                      </k-drop-down-list>
                       <button k-button click.delegate="navigate()">Navigate</button>
                   </li>
               </ul>
