--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -38,7 +38,7 @@
                    <a href="#/samples/line-charts">Line Charts</a>           <br>
                    <img src="images/blue.png">
                    <a href="#/samples/stock">Stock Charts</a>                <br>
-                   <img src="images/orange.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
                    <a>Window</a>                                             <br>
                    <a>Upload</a>                                             <br>
@@ -62,12 +62,13 @@
                    <a href="#/samples/autocomplete">Autocomplete</a>         <br>
                    <img src="images/blue.png">
                    <a href="#/samples/colorpicker">ColorPicker</a>           <br>
+                   <img src="images/blue.png">
                    <a href="#/samples/combobox">Combobox</a>                 <br>
                    <img src="images/blue.png">
                    <a href="#/samples/datepicker">DatePicker</a>             <br>
                    <img src="images/blue.png">
                    <a href="#/samples/datetimepicker">DateTimePicker</a>     <br>
-                   <img src="images/orange.png">
+                   <img src="images/blue.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
                    <a>Editor</a>                                             <br>
                    <img src="images/blue.png">
