--- a/sample/src/samples/editor/basic-use.html
+++ b/sample/src/samples/editor/basic-use.html
@@ -1,10 +1,33 @@
-<template>
+<template style="display: block;">
   <div id="example">
     <div id="editor-basic-use">
-      <div class="demo-section k-content" style="text-align: center;">
-         <h4>Editor basic use</h4>
-         <k-editor></k-editor>
+      <div class="demo-section">
+          <textarea ref="textarea" id="editor" rows="10" cols="30" style="height:440px">
+
+            &lt;p&gt;
+                Kendo UI Editor allows your users to edit HTML in a familiar, user-friendly way.&lt;br /&gt;
+                In this version, the Editor provides the core HTML editing engine, which includes basic text formatting, hyperlinks, lists,
+                and image handling. The widget &lt;strong&gt;outputs identical HTML&lt;/strong&gt; across all major browsers, follows
+                accessibility standards and provides API for content manipulation.
+            &lt;/p&gt;
+            &lt;p&gt;Features include:&lt;/p&gt;
+            &lt;ul&gt;
+                &lt;li&gt;Text formatting &amp; alignment&lt;/li&gt;
+                &lt;li&gt;Bulleted and numbered lists&lt;/li&gt;
+                &lt;li&gt;Hyperlink and image dialogs&lt;/li&gt;
+                &lt;li&gt;Cross-browser support&lt;/li&gt;
+                &lt;li&gt;Identical HTML output across browsers&lt;/li&gt;
+                &lt;li&gt;Gracefully degrades to a &lt;code&gt;textarea&lt;/code&gt; when JavaScript is turned off&lt;/li&gt;
+            &lt;/ul&gt;
+            &lt;p&gt;
+                Read &lt;a href=&quot;http://docs.telerik.com/kendo-ui&quot;&gt;more details&lt;/a&gt; or send us your
+                &lt;a href=&quot;http://www.telerik.com/forums/&quot;&gt;feedback&lt;/a&gt;!
+            &lt;/p&gt;
+          </textarea>
+          <k-editor></k-editor>
        </div>
     </div>
    </div>
 </template>
+
+'/dropdownlist/cap.png'
