chore(editor): implement editor via custom attribute k-editor

--- a/sample/src/samples/editor/basic-use.html
+++ b/sample/src/samples/editor/basic-use.html
@@ -2,7 +2,7 @@
   <div id="example">
     <div id="editor-basic-use">
       <div class="demo-section">
-          <textarea ref="textarea" id="editor" rows="10" cols="30" style="height:440px">
+          <textarea k-editor id="editor" rows="10" cols="30" style="height:440px">
 
             &lt;p&gt;
                 Kendo UI Editor allows your users to edit HTML in a familiar, user-friendly way.&lt;br /&gt;
@@ -24,10 +24,8 @@
                 &lt;a href=&quot;http://www.telerik.com/forums/&quot;&gt;feedback&lt;/a&gt;!
             &lt;/p&gt;
           </textarea>
-          <k-editor></k-editor>
+
        </div>
     </div>
    </div>
 </template>
-
-'/dropdownlist/cap.png'
