--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -4,7 +4,7 @@
     <div class="k-header header">
       <div style="margin:auto;text-align:center">
         <h1 class="text-lg">Aurelia Kendo UI <i>Bridge</i></h1>
-        <h2>Industry standard, tried and tested HTML5 widgets - enhanced by Aurelia</h2>
+        <h3>Industry standard, tried and tested HTML5 widgets - enhanced by Aurelia</h3>
       </div>
     </div>
     <div class="row">
@@ -19,16 +19,16 @@
        </div>
     </div>
     <section>
-      <h3 class="text-center" style="padding-top: 20px; padding-bottom:20px">
+      <h4 class="text-center" style="padding-top: 20px; padding-bottom:20px">
         <ul class="features">
           <li>We've done the hard work for you</li>
           <li>Use Kendo UI components in your Aurelia application <i style="text-decoration:underline">without writing any wrapper code</i></li>
           <li>Powerful binding expressions <i>directly in your markup</i></li>
           <li>Full support for Aurelia's templating system in Kendo templates</li>
-          <li><a href="#samples">Get started</a> or check out the example below</li>
+          <li><a href="#samples">See the catalog</a> or check out the example below</li>
         </ul>
-      </h3>
-      <h2>Example</h3>
+      </h4>
+      <h3>Example</h3>
       <div class="row">
         <div class="col-sm-12">
           <k-grid k-data-source.bind="datasource" k-pageable.bind="{ refresh: true, pageSizes: true, buttonCount: 10 }" k-sortable.bind="true">
