next batch of changes

--- a/sample/src/samples/editor/basic-use.html
+++ b/sample/src/samples/editor/basic-use.html
@@ -1,5 +1,6 @@
 <template >
-  <textarea k-editor style="height:400px; width: 800px">
+  <textarea k-editor style="height:440px">
+
     &lt;p&gt;&lt;img src=&quot;http://demos.telerik.com/kendo-ui/content/web/editor/kendo-ui-web.png&quot; alt=&quot;Editor for ASP.NET MVC logo&quot; style=&quot;display:block;margin-left:auto;margin-right:auto;&quot; /&gt;&lt;/p&gt;
     &lt;p&gt;
         Kendo UI Editor allows your users to edit HTML in a familiar, user-friendly way.&lt;br /&gt;
