--- a/sample/src/samples/editor/snippets.html
+++ b/sample/src/samples/editor/snippets.html
@@ -1,5 +1,9 @@
 <template >
-  <textarea k-editor="k-tools.bind: tools; style="height:400px; width: 600px">
-      Put the cursor after this text and use the "Insert HTML" tool.
+    <textarea k-editor="k-tools.bind: tools"
+              style="height:440px">
+
+    Put the cursor after this text and use the "Insert HTML" tool.
   </textarea>
 </template>
+
+
