last set of updates

--- a/sample/src/samples/editor/file-and-image-browser.html
+++ b/sample/src/samples/editor/file-and-image-browser.html
@@ -1,4 +1,5 @@
 <template >
+<div id="example">
     <div class="box wide">
         <p>Allowed file types for the Image browser are: jpg, jpeg, gif, png</p>
         <p>Allowed file types for the File browser for this demo are: txt, doc, docx, xls, xlsx, ppt, pptx, zip, rar, jpg, jpeg, gif, png</p>
@@ -27,5 +28,6 @@
         Read &lt;a href=&quot;http://docs.telerik.com/kendo-ui&quot;&gt;more details&lt;/a&gt; or send us your
         &lt;a href=&quot;http://www.telerik.com/forums/&quot;&gt;feedback&lt;/a&gt;!
     &lt;/p&gt;
-  </textarea>
+    </textarea>
+</div>
 </template>
