--- a/sample/src/samples/editor/snippets.html
+++ b/sample/src/samples/editor/snippets.html
@@ -1,9 +1,11 @@
 <template >
+  <div id="example">
     <textarea k-editor="k-tools.bind: tools"
               style="height:440px">
 
     Put the cursor after this text and use the "Insert HTML" tool.
-  </textarea>
+    </textarea>
+  </div>
 </template>
 
 
